Fixed #17 (Error with Path.of)